--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Yasin Tazeoglu</h1>
+    <a href="https://yasintz.github.io/word-memoizer.html">Word Memoizer</a>
+    <a href="https://yasintz.github.io/time-management.html">Time Management</a>
   </body>
 </html>
